--- a/xygine/xygine.vcxproj
+++ b/xygine/xygine.vcxproj
@@ -171,6 +171,8 @@
     <ClCompile Include="src\mesh\Material.cpp" />
     <ClCompile Include="src\mesh\MeshResource.cpp" />
     <ClCompile Include="src\mesh\RenderQuad.cpp" />
+    <ClCompile Include="src\mesh\Skeleton.cpp" />
+    <ClCompile Include="src\mesh\SkeletonAnimation.cpp" />
     <ClCompile Include="src\mesh\SubMesh.cpp" />
     <ClCompile Include="src\mesh\UniformBuffer.cpp" />
     <ClCompile Include="src\mesh\VertexAttribBinding.cpp" />
@@ -265,6 +267,7 @@
     <ClInclude Include="include\xygine\mesh\shaders\GeomVis.hpp" />
     <ClInclude Include="include\xygine\mesh\shaders\LightBlur.hpp" />
     <ClInclude Include="include\xygine\mesh\shaders\SSAO.hpp" />
+    <ClInclude Include="include\xygine\mesh\Skeleton.hpp" />
     <ClInclude Include="include\xygine\mesh\StaticConsts.hpp" />
     <ClInclude Include="include\xygine\mesh\SubMesh.hpp" />
     <ClInclude Include="include\xygine\mesh\UniformBuffer.hpp" />
