broke rendering by adding multiple passes to materials

--- a/xygine/src/CMakeLists.txt
+++ b/xygine/src/CMakeLists.txt
@@ -46,6 +46,7 @@ set(XY_SRC
   ${XY_DIR}/mesh/Mesh.cpp
   ${XY_DIR}/mesh/MeshRenderer.cpp
   ${XY_DIR}/mesh/MeshResource.cpp
+  ${XY_DIR}/mesh/RenderPass.cpp
   ${XY_DIR}/mesh/RenderQuad.cpp
   ${XY_DIR}/mesh/Skeleton.cpp
   ${XY_DIR}/mesh/SkeletonAnimation.cpp
