--- a/xygine/xygine.vcxproj
+++ b/xygine/xygine.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="src\mesh\MeshRenderer.cpp" />
     <ClCompile Include="src\mesh\Material.cpp" />
     <ClCompile Include="src\mesh\MeshResource.cpp" />
+    <ClCompile Include="src\mesh\RenderPass.cpp" />
     <ClCompile Include="src\mesh\RenderQuad.cpp" />
     <ClCompile Include="src\mesh\Skeleton.cpp" />
     <ClCompile Include="src\mesh\SkeletonAnimation.cpp" />
@@ -254,12 +255,14 @@
     <ClInclude Include="include\xygine\mesh\CubeBuilder.hpp" />
     <ClInclude Include="include\xygine\mesh\IQMBuilder.hpp" />
     <ClInclude Include="include\xygine\mesh\Material.hpp" />
+    <ClInclude Include="include\xygine\mesh\MaterialProperty.hpp" />
     <ClInclude Include="include\xygine\mesh\MaterialResource.hpp" />
     <ClInclude Include="include\xygine\mesh\Mesh.hpp" />
     <ClInclude Include="include\xygine\mesh\ModelBuilder.hpp" />
     <ClInclude Include="include\xygine\mesh\MeshRenderer.hpp" />
     <ClInclude Include="include\xygine\mesh\MeshResource.hpp" />
     <ClInclude Include="include\xygine\mesh\QuadBuilder.hpp" />
+    <ClInclude Include="include\xygine\mesh\RenderPass.hpp" />
     <ClInclude Include="include\xygine\mesh\RenderQuad.hpp" />
     <ClInclude Include="include\xygine\mesh\shaders\Default.hpp" />
     <ClInclude Include="include\xygine\mesh\shaders\DeferredLighting.hpp" />
