add console class add cursor visibility property to App class add allowing imgui drawing its own mouse cursor when required

--- a/xygine/src/CMakeLists.txt
+++ b/xygine/src/CMakeLists.txt
@@ -2,6 +2,7 @@ set(XY_SRC
   ${XY_DIR}/App.cpp
   ${XY_DIR}/AudioManager.cpp
   ${XY_DIR}/CommandQueue.cpp 
+  ${XY_DIR}/Console.cpp 
   ${XY_DIR}/Entity.cpp
   ${XY_DIR}/FileSystem.cpp
   ${XY_DIR}/FontResource.cpp
