--- a/xygine/xygine.vcxproj
+++ b/xygine/xygine.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="src\components\ComponentParticleSystem.cpp" />
     <ClCompile Include="src\components\ComponentPointLight.cpp" />
     <ClCompile Include="src\components\QuadTreeComponent.cpp" />
+    <ClCompile Include="src\Console.cpp" />
     <ClCompile Include="src\GLExtensions.cpp" />
     <ClCompile Include="src\imgui\imgui_sfml.cpp" />
     <ClCompile Include="src\imgui\imgui.cpp" />
@@ -253,6 +254,7 @@
     <ClInclude Include="include\xygine\components\Model.hpp" />
     <ClInclude Include="include\xygine\components\PointLight.hpp" />
     <ClInclude Include="include\xygine\Config.hpp" />
+    <ClInclude Include="include\xygine\Console.hpp" />
     <ClInclude Include="include\xygine\detail\GLCheck.hpp" />
     <ClInclude Include="include\xygine\detail\GLExtensions.hpp" />
     <ClInclude Include="include\xygine\imgui\imconfig.h" />
