updated readme updated doxy file made active light count a parameter in deffered lighting shader added MVP matrix to point light structs added depth render texture class

--- a/xygine/src/CMakeLists.txt
+++ b/xygine/src/CMakeLists.txt
@@ -45,6 +45,7 @@ set(XY_SRC
 
   ${XY_DIR}/mesh/BoundingBox.cpp
   ${XY_DIR}/mesh/CubeBuilder.cpp
+  ${XY_DIR}/mesh/DepthRenderTexture.cpp
   ${XY_DIR}/mesh/IQMBuilder.cpp
   ${XY_DIR}/mesh/Material.cpp
   ${XY_DIR}/mesh/MaterialProperty.cpp
