add sprite batch component

--- a/xygine/src/CMakeLists.txt
+++ b/xygine/src/CMakeLists.txt
@@ -35,6 +35,7 @@ set(XY_SRC
   ${XY_DIR}/components/ComponentParticleSystem.cpp  
   ${XY_DIR}/components/ComponentPointLight.cpp  
   ${XY_DIR}/components/ComponentSoundPlayer.cpp
+  ${XY_DIR}/components/ComponentSpriteBatch.cpp
   ${XY_DIR}/components/QuadTreeComponent.cpp 
 
   ${XY_DIR}/imgui/imgui.cpp
