moved some shared functions from tileset class to freefuncs made all layer types derive from single abc

--- a/xygine/xygine.vcxproj
+++ b/xygine/xygine.vcxproj
@@ -386,6 +386,7 @@
     <ClInclude Include="include\xygine\tilemap\Map.hpp" />
     <ClInclude Include="include\xygine\tilemap\ObjectGroup.hpp" />
     <ClInclude Include="include\xygine\tilemap\Property.hpp" />
+    <ClInclude Include="include\xygine\tilemap\TileLayer.hpp" />
     <ClInclude Include="include\xygine\tilemap\Tileset.hpp" />
     <ClInclude Include="include\xygine\ui\Button.hpp" />
     <ClInclude Include="include\xygine\ui\CheckBox.hpp" />
