add parsing image layers from tmx files

--- a/xygine/src/CMakeLists.txt
+++ b/xygine/src/CMakeLists.txt
@@ -97,6 +97,7 @@ set(XY_SRC
   ${XY_DIR}/spriter/SpriterHelpers.cpp
   ${XY_DIR}/spriter/SpriterModel.cpp
 
+  ${XY_DIR}/tilemap/ImageLayer.cpp
   ${XY_DIR}/tilemap/Map.cpp
   ${XY_DIR}/tilemap/miniz.c
   ${XY_DIR}/tilemap/Property.cpp
