--- a/xygine/xygine.vcxproj
+++ b/xygine/xygine.vcxproj
@@ -239,6 +239,7 @@
     <ClCompile Include="src\spriter\SpriterModel.cpp" />
     <ClCompile Include="src\State.cpp" />
     <ClCompile Include="src\StateStack.cpp" />
+    <ClCompile Include="src\tilemap\ImageLayer.cpp" />
     <ClCompile Include="src\tilemap\Map.cpp" />
     <ClCompile Include="src\tilemap\miniz.c" />
     <ClCompile Include="src\tilemap\Property.cpp" />
