--- a/xygine/xygine.vcxproj
+++ b/xygine/xygine.vcxproj
@@ -239,10 +239,12 @@
     <ClCompile Include="src\spriter\SpriterModel.cpp" />
     <ClCompile Include="src\State.cpp" />
     <ClCompile Include="src\StateStack.cpp" />
+    <ClCompile Include="src\tilemap\FreeFuncs.cpp" />
     <ClCompile Include="src\tilemap\ImageLayer.cpp" />
     <ClCompile Include="src\tilemap\Map.cpp" />
     <ClCompile Include="src\tilemap\miniz.c" />
     <ClCompile Include="src\tilemap\Property.cpp" />
+    <ClCompile Include="src\tilemap\TileLayer.cpp" />
     <ClCompile Include="src\tilemap\Tileset.cpp" />
     <ClCompile Include="src\ui\UIButton.cpp" />
     <ClCompile Include="src\ui\UICheckBox.cpp" />
