--- a/xygine/src/CMakeLists.txt
+++ b/xygine/src/CMakeLists.txt
@@ -101,6 +101,8 @@ set(XY_SRC
   ${XY_DIR}/tilemap/ImageLayer.cpp
   ${XY_DIR}/tilemap/Map.cpp
   ${XY_DIR}/tilemap/miniz.c
+  ${XY_DIR}/tilemap/Object.cpp
+  ${XY_DIR}/tilemap/ObjectGroup.cpp
   ${XY_DIR}/tilemap/Property.cpp
   ${XY_DIR}/tilemap/TileLayer.cpp
   ${XY_DIR}/tilemap/Tileset.cpp
