--- a/xygine/xygine.vcxproj.filters
+++ b/xygine/xygine.vcxproj.filters
@@ -881,5 +881,8 @@
     <ClInclude Include="include\xygine\components\TileMapLayer.hpp">
       <Filter>Header Files\components</Filter>
     </ClInclude>
+    <ClInclude Include="include\xygine\shaders\Tilemap.hpp">
+      <Filter>Header Files\shaders</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
