update cmake files for xyTools and check build on linux

--- a/xyTools/src/CMakeLists.txt
+++ b/xyTools/src/CMakeLists.txt
@@ -1,7 +1,7 @@
-SET(EXAMPLE_SRC
-  src/Game.cpp
-  src/main.cpp
-  src/MAterialEditorState.cpp
-  src/MenuMainState.cpp
-  src/ParticleEditorState.cpp
-  src/SpriteEditorState.cpp)
+SET(PROJECT_SRC
+  ${PROJECT_DIR}/Game.cpp
+  ${PROJECT_DIR}/main.cpp
+  ${PROJECT_DIR}/MaterialEditorState.cpp
+  ${PROJECT_DIR}/MenuMainState.cpp
+  ${PROJECT_DIR}/ParticleEditorState.cpp
+  ${PROJECT_DIR}/SpriteEditorState.cpp)
