added some ui functions for commonly used dialogues such as file browsing updated the material editor / model viewer UI a bit

--- a/xygine/src/CMakeLists.txt
+++ b/xygine/src/CMakeLists.txt
@@ -39,6 +39,7 @@ set(XY_SRC
   ${XY_DIR}/components/ComponentTileMapLayer.cpp
   ${XY_DIR}/components/QuadTreeComponent.cpp 
 
+  ${XY_DIR}/imgui/CommonDialogues.cpp
   ${XY_DIR}/imgui/imgui.cpp
   ${XY_DIR}/imgui/imgui_demo.cpp
   ${XY_DIR}/imgui/imgui_draw.cpp
